--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ function showMembersPortal() {
 
 // Password gating for members portal (custom modal, works in Google Sites embeds)
 let membersAuthenticated = false;
-const PASS = 'ILuvRocketry';
+const PASS = 'BlastOFF';
 const modal = document.getElementById('password-modal');
 const input = document.getElementById('password-input');
 const submit = document.getElementById('password-submit');
