--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ function showSubteamDetail(id){
     if (meta.image){
       subteamDetailImage.src = meta.image;
       subteamDetailImage.alt = meta.title + ' visual';
-      subteamDetailImage.style.display = '';
+      subteamDetailImage.style.display = 'block';
     } else {
       subteamDetailImage.style.display = 'none';
     }
